feat: Allow closing a permanent transportation portal with recasting the spell. Fixes #91

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -503,7 +503,7 @@ item.ancientspellcraft\:head_merchant.desc=Wizards agree to buy your scrolls
 item.ancientspellcraft\:head_merchant.name=Crown of the Merchant King
 item.ancientspellcraft\:head_minions.desc=Summoned minions follow their master
 item.ancientspellcraft\:head_minions.name=Circlet of the Overlord
-item.ancientspellcraft\:head_riftstone.desc=Makes your Transportation Portals permanent
+item.ancientspellcraft\:head_riftstone.desc=Makes your Transportation Portals permanent. Cast the spell on a portal to dispel the portal
 item.ancientspellcraft\:head_riftstone.name=Riftstone Circlet
 item.ancientspellcraft\:head_shield.desc=Significantly reduces the decay rate of the Wizard Shield effect
 item.ancientspellcraft\:head_shield.name=Circlet of Shielding
@@ -513,7 +513,7 @@ item.ancientspellcraft\:ice_cream.potion_name=Ice Cream of %1$s
 item.ancientspellcraft\:ice_shield.desc1=Applies a Frostbite effect to attackers
 item.ancientspellcraft\:ice_shield.desc2=Explodes when it breaks
 item.ancientspellcraft\:ice_shield.name=Ice Shield
-item.ancientspellcraft\:knowledge_scroll.desc=When cast on a wand in your other hand, immediately grants 1/3 of the missing progression XP required for the wand's next tier
+item.ancientspellcraft\:knowledge_scroll.desc=When cast on a wand in your left hand, immediately grants 1/3 of the missing progression XP required for the wand's next tier
 item.ancientspellcraft\:knowledge_scroll.name=Scroll of Knowledge
 item.ancientspellcraft\:magic_shield.desc=This ancient crystal shield casts a protective ward to defend its wielder while blocking.
 item.ancientspellcraft\:magic_shield.name=Spellbreaker
@@ -1120,7 +1120,7 @@ spell.ancientspellcraft\:time_knot.desc=The end is the beginning and the beginni
 spell.ancientspellcraft\:time_knot=Time Knot
 spell.ancientspellcraft\:transference.desc=Transfers a random positive potion effect to the target. Potency increases the number of effects that are transferred.
 spell.ancientspellcraft\:transference=Transference
-spell.ancientspellcraft\:transportation_portal.desc=Only masters of Sorcery can unlock the true power of Transportation Stones and open Transportation Portals.
+spell.ancientspellcraft\:transportation_portal.desc=Only masters of Sorcery can unlock the true power of Transportation Stones and open Transportation Portals. Cast again on a portal to dispel it.
 spell.ancientspellcraft\:transportation_portal.too_close=The target location is too close
 spell.ancientspellcraft\:transportation_portal=Transportation Portal
 spell.ancientspellcraft\:turn_undead.desc=The targeted undead creature flees for a short duration.
