--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -482,7 +482,7 @@ item.ancientspellcraft\:devoritium_shield.desc_extended=Devoritim weapons and to
 item.ancientspellcraft\:devoritium_shield.name=Devoritium Shield
 item.ancientspellcraft\:devoritium_sword.desc_extended=Devoritim weapons and tools are capable of suppressing and absorbing magic, weakening the magical abilities of both the wielder of them and the target they hit. Its impossible to enchant this rare metal as applied enchantments are immediately absorbed
 item.ancientspellcraft\:devoritium_sword.name=Devoritium Sword
-item.ancientspellcraft\:duplication_scroll.desc=The raw arcane energy of this scroll is capable of duplicating any kind of book or scroll
+item.ancientspellcraft\:duplication_scroll.desc=The raw arcane energy of this scroll is capable of duplicating any kind of spell book or scroll. Left-click to duplicate the item held in the off hand
 item.ancientspellcraft\:duplication_scroll.name=Scroll of Duplication
 item.ancientspellcraft\:enchanted_filament.name=Enchanted Filament
 item.ancientspellcraft\:enchanted_name_tag.desc_empty=Can be used to locate biomes with the Will o' Wisp Spell. Needs infusing with Magic Crystals at the Arcane Workbench
