--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -1069,7 +1069,7 @@ spell.ancientspellcraft\:silencing_sigil.desc=Places a sigil which magically sil
 spell.ancientspellcraft\:silencing_sigil=Silencing Sigil
 spell.ancientspellcraft\:singe.desc=Deals low fire damage to the targeted entity. The damage is amplified if the target is already burning.
 spell.ancientspellcraft\:singe=Singe
-spell.ancientspellcraft\:skull_sentinel.desc=Enchants a skull on the ground to ward an area. The skull shrieks if an entity enters the area
+spell.ancientspellcraft\:skull_sentinel.desc=Enchants a skull on the ground to guard an area. The skull shrieks if a hostile entity enters the area.
 spell.ancientspellcraft\:skull_sentinel=Skull Sentinel
 spell.ancientspellcraft\:snow_block.desc=Creates a Snow Block
 spell.ancientspellcraft\:snow_block=Snow Block
@@ -1190,6 +1190,8 @@ spell.ancientspellcraft\:runeword_sol.desc=Hitting an enemy with the Spell Blade
 spell.ancientspellcraft\:runeword_sol=Runeword: Sol
 spell.ancientspellcraft\:runeword_suppress.desc=The next 3 hits of the Spell Blade applies a stacking Magical Exhaustion effect on the target for 3 seconds. If the target is already affected, some of it backfires on the Battlemage too.
 spell.ancientspellcraft\:runeword_suppress=Runeword: Suppress
+spell.ancientspellcraft\:runeword_strength.desc=Temporarily empowers you with Strength.
+spell.ancientspellcraft\:runeword_strength=Runeword: Strength
 
 
 # spell type
@@ -1399,7 +1401,7 @@ spell.ancientspellcraft\:arcane_wall=Arcane Wall
 spell.ancientspellcraft\:arcane_wall.desc=Creates a permanent magical barrier which is only passable by allies. Sneak-cast again to dispel.
 spell.ancientspellcraft\:death_mark=Death Mark
 spell.ancientspellcraft\:death_mark.desc=Places a magical glyph on the targeted entity, allowing you to sense if the entity dies.
-spell.ancientspellcraft\:death_mark.entity_death_message=Death-marked %1$s died at %2$s %3$s %4$s
+spell.ancientspellcraft\:death_mark.entity_death_message=Death-marked %1$s died at %2$s, %3$s, %4$s
 spell.ancientspellcraft\:death_mark.entity_marked=Death-marked %1$s
 
 spell.ancientspellcraft\:tome_warp=Tome Warp
