chore: fix typo

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -1431,5 +1431,5 @@ item.ancientspellcraft\:amulet_searing_skin.name=Amulet of Searing Skin
 item.ancientspellcraft\:amulet_searing_skin.desc=The Fireskin effect also grants regeneration
 item.ancientspellcraft\:amulet_elemental_aura.name=Amulet of Elemental Aura
 item.ancientspellcraft\:amulet_elemental_aura.desc=Ice Shroud, Fireskin and Static Aura has a chance to affect nearby enemies
-item.ancientspellcraft\:charm_plunterers_mark.name=Plunderer's Mark
-item.ancientspellcraft\:charm_plunterers_mark.desc=Evil Wizards are always dropping an astral diamond shard
+item.ancientspellcraft\:charm_plunderers_mark.name=Plunderer's Mark
+item.ancientspellcraft\:charm_plunderers_mark.desc=Evil Wizards are always dropping an astral diamond shard
