feat: More runewords and artefacts

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -367,6 +367,8 @@ item.ancientspellcraft\:charm_glyph_vitality.desc=Increases the rate of natural 
 item.ancientspellcraft\:charm_glyph_vitality.name=Glyph of Vitality
 item.ancientspellcraft\:charm_glyph_warden.desc=Hiding inside your own thorn bushes grants Regeneration I
 item.ancientspellcraft\:charm_glyph_warden.name=Glyph of the Warden
+item.ancientspellcraft\:charm_glyph_imbuement.desc=Runeword: Imbue lasts for 4x more hits with the Spell Blade
+item.ancientspellcraft\:charm_glyph_imbuement.name=Glyph of Alchemy
 item.ancientspellcraft\:charm_gold_bag.desc=This magically enhanced coin bag refills itself with 3-8 gold nuggets each day
 item.ancientspellcraft\:charm_gold_bag.empty=You search through the bag but it was empty..
 item.ancientspellcraft\:charm_gold_bag.name=Everfull Bag of Gold
@@ -579,6 +581,7 @@ item.ancientspellcraft\:ring_withdraw_life.desc=Overhealing from Withdraw Life g
 item.ancientspellcraft\:ring_withdraw_life.name=Ring of the Overlord
 item.ancientspellcraft\:ritual_book.name=Ritual Book
 item.ancientspellcraft\:ritual_book.desc=Can be identified with a Scroll of Identification
+item.ancientspellcraft\:ritual_book.desc_disabled=This ritual is disabled
 item.ancientspellcraft\:rune_algiz.name=Algiz Rune
 item.ancientspellcraft\:rune_ansuz.name=Ansuz Rune
 item.ancientspellcraft\:rune_berkanan.name=Berkanan Rune
@@ -686,6 +689,7 @@ item.ancientspellcraft\:theory_scroll.desc=Sneak-use the scroll to use it and re
 item.ancientspellcraft\:theory_scroll.created=You wrote a theory on the scroll
 item.ancientspellcraft\:theory_scroll.used=You read the scroll, receiving a Theory Point
 item.ebwizardry\:identification_scroll.desc=Identifies an unknown spell book, scroll or ritual book
+item.ancientspellcraft\:rare_scroll_tooltip=Rare Scroll
 
 item.ancientspellcraft\:all_other_elements=All other elements
 
@@ -1176,7 +1180,9 @@ spell.ancientspellcraft\:runeword_endure.desc=Hold your ground for 5 seconds, re
 spell.ancientspellcraft\:runeword_endure=Runeword: Endure
 spell.ancientspellcraft\:runeword_exorcise.desc=Blesses the Spell Blade, causing the next 3 attacks deal 50%% more damage against undeads, weaken them and set them on fire.
 spell.ancientspellcraft\:runeword_exorcise=Runeword: Exorcise
-spell.ancientspellcraft\:runeword_fury.desc=Hitting enemies with the Spell Blade temporarily increases it's melee damage by up to 50%%
+spell.ancientspellcraft\:runeword_implode.desc=The Spell Blade pulls in all nearby enemies and deals a small amount of damage to them.
+spell.ancientspellcraft\:runeword_implode=Runeword: Implode
+spell.ancientspellcraft\:runeword_fury.desc=Hitting enemies with the Spell Blade temporarily increases it's melee damage by up to 50%%.
 spell.ancientspellcraft\:runeword_fury=Runeword: Fury
 spell.ancientspellcraft\:runeword_pull.desc=Greatly increases the attack range of the Spell Blade and pulls the enemy for the next 2 attacks.
 spell.ancientspellcraft\:runeword_pull=Runeword: Pull
@@ -1194,7 +1200,16 @@ spell.ancientspellcraft\:runeword_strength.desc=Temporarily empowers you with St
 spell.ancientspellcraft\:runeword_strength=Runeword: Strength
 spell.ancientspellcraft\:runeword_ignite.desc=The next hit with the Spell Blade sets the target on fire for a long duration.
 spell.ancientspellcraft\:runeword_ignite=Runeword: Ignite
-
+spell.ancientspellcraft\:runeword_imbue.desc=Imbue the Spell Blade with a potion from the hotbar for the next few hits
+spell.ancientspellcraft\:runeword_imbue=Runeword: Imbue
+spell.ancientspellcraft\:runeword_empower.desc=Instantly charges the Spell Blade, causing its next attack to trigger its empowered effect.
+spell.ancientspellcraft\:runeword_empower=Runeword: Empower
+spell.ancientspellcraft\:runeword_restoration.desc=Draw power from the Spell Blade, restoring 10%% missing health.
+spell.ancientspellcraft\:runeword_restoration=Runeword: Restoration
+spell.ancientspellcraft\:runeword_arcane.desc=Imbue the Spell Blade with arcane energy, causing your next hit to deal 70% weapon damage and bypass armour.
+spell.ancientspellcraft\:runeword_arcane=Runeword: Arcane
+spell.ancientspellcraft\:runeword_disarm.desc=The next attack with the Spell Blade will disable the targeted player's held items for 3 seconds.
+spell.ancientspellcraft\:runeword_disarm=Runeword: Disarm
 
 # spell type
 spelltype.contingency=Contingency
@@ -1224,6 +1239,8 @@ tile.ancientspellcraft\:master_bolt.name=Master Bolt
 tile.ancientspellcraft\:quicksand.name=Quicksand
 tile.ancientspellcraft\:sage_lectern.failed_attempt_to_read_tome=A Sage Tome only opens for a true sage
 tile.ancientspellcraft\:sage_lectern.name=Mystic Lectern
+tile.ancientspellcraft\:sage_lectern.not_enough_progression_xp=Needs more progression xp
+tile.ancientspellcraft\:sage_lectern.required_pages=Needs %s Enchanted Pages
 tile.ancientspellcraft\:scribing_desk.button.missing=Missing Requirements
 tile.ancientspellcraft\:scribing_desk.button.write=Write Spellbook
 tile.ancientspellcraft\:scribing_desk.desc_extended=You can recreate ancient spells at the Scribing Desk with the help of a researched Stone Tablet if the tablet contains a spell
@@ -1262,6 +1279,8 @@ item.ancientspellcraft\:charm_ice_arrow.name=TODO
 item.ancientspellcraft\:charm_ice_arrow.desc=TODO
 item.ancientspellcraft\:purifying_elixir_recipe.name=Lost Recipe
 item.ancientspellcraft\:purifying_elixir_recipe.desc=Purifying Elixir\nCan be used in a crafting table as a recipe component
+item.ancientspellcraft\:large_mana_flask_recipe.name=Lost Recipe
+item.ancientspellcraft\:large_mana_flask_recipe.desc=Large Mana Flask\nCan be used in a crafting table as a recipe component
 item.ancientspellcraft\:amulet_oakflesh.name=Oaken Talisman
 item.ancientspellcraft\:amulet_oakflesh.desc=Oakflesh grants regeneration in forest biomes
 spell.ancientspellcraft\:conjure_ink=Conjure Ink
@@ -1431,7 +1450,11 @@ item.ancientspellcraft\:amulet_searing_skin.name=Amulet of Searing Skin
 item.ancientspellcraft\:amulet_searing_skin.desc=The Fireskin effect also grants regeneration
 item.ancientspellcraft\:amulet_elemental_aura.name=Amulet of Elemental Aura
 item.ancientspellcraft\:amulet_elemental_aura.desc=Ice Shroud, Fireskin and Static Aura has a chance to affect nearby enemies
+item.ancientspellcraft\:amulet_cursed_mirror.name=Cursed Mirror
+item.ancientspellcraft\:amulet_cursed_mirror.desc=Incoming curses have 50%% chance to rebound, affecting the closest hostile spellcaster too
 item.ancientspellcraft\:charm_plunderers_mark.name=Plunderer's Mark
 item.ancientspellcraft\:charm_plunderers_mark.desc=Evil Wizards are always dropping an astral diamond shard
+item.ancientspellcraft\:charm_wizard_ale.name=Keg of Legendary Ale
+item.ancientspellcraft\:charm_wizard_ale.desc=Travelling Wizards stay for a week instead of a day when you use a Scroll of Bartering
 item.ancientspellcraft\:belt_soul_scorch.name=Scorching Belt
 item.ancientspellcraft\:belt_soul_scorch.desc=Attackers receive the Soul Scorch effect or 3 seconds
