feat: Skeleton Mages are now spawning naturally, also added a rare, more powerful variant

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -84,6 +84,8 @@ entity.ancientspellcraft\:creeper_minion.name=Creeper Minion
 entity.ancientspellcraft\:pig_zombie_minion.name=Pigman Minion
 entity.ancientspellcraft\:skeleton_horse_minion-name=%1$s's Skeleton Horse
 entity.ancientspellcraft\:skeleton_mage_minion.name=Skeleton Mage
+entity.ancientspellcraft\:skeleton_mage.name=Skeleton Mage
+entity.ancientspellcraft\:ghost_mage.name=Ghost Mage
 entity.ancientspellcraft\:spellcaster_entity.name=Sentinel
 entity.ancientspellcraft\:spellcaster_entity.name_conjured=%1$s's Conjured Sentinel
 entity.ancientspellcraft\:spirit_bear.name=Spirit Bear
