fix: Fixed book description of the Experiment spell

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -1320,8 +1320,8 @@ generic.ancientspellcraft\:spell_lectern_interact.needs_empty_book=Must be cast 
 spell.ancientspellcraft\:identify.no_valid_book=Must be cast on an unknown, not class specific spell
 spell.ancientspellcraft\:identify=Identify
 spell.ancientspellcraft\:experiment.desc_before_first_cast=Experiment with magic to gain Theory Points. You need to know at least %1$s spells to begin experimenting.\nKnown: %2$s
-spell.ancientspellcraft\:experiment.desc=Experiment with magic to gain Theory Points.\nSuccess chance: %1$s\%\nTheory Points: %2$s\nElements Researched: %3$s
 spell.ancientspellcraft\:experiment=Experiment
+spell.ancientspellcraft\:experiment.desc=Experiment with magic to gain Theory Points.\nSuccess chance: %1$s%%\nTheory Points: %2$s\nElements Researched: %3$s
 spell.ancientspellcraft\:experiment.not_enough_known_spells=You don't have enough knowledge of magic to begin Experimenting! You know %1$s spells, to begin experimenting you need to know %3$s more (%2$s in total).
 spell.ancientspellcraft\:experiment.buff_effect=You are affected by %1$s!
 spell.ancientspellcraft\:experiment.first_cast_with_bonus=Because of your deep understanding of magic, you've received %1$s Theory Points for your first cast of Experiment! Theory Points can be used to make spells with the Scribe spell.
