feat: Added the Scroll of Imbuement, a new rare scroll type

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -678,6 +678,8 @@ item.ancientspellcraft\:transmutation_scroll.interrupted=You must cast the scrol
 item.ancientspellcraft\:transmutation_scroll.name=Scroll of Transmutation
 item.ancientspellcraft\:unsealing_scroll.name=Scroll of Unsealing
 item.ancientspellcraft\:unsealing_scroll.desc=Dispels an arcane wall which protects a structure
+item.ancientspellcraft\:imbuement_scroll.name=Scroll of Imbuement
+item.ancientspellcraft\:imbuement_scroll.desc=Can be used on Imbuement Altars to overwrite the element of wands and wizard gear\nPlace 4 matching dusts in the receptacles and the item in the altar, then use the scroll on the altar
 item.ancientspellcraft\:transmutation_scroll.results_in_same_item=This transmutation would result in the same item!
 item.ancientspellcraft\:wizard_hat_ancient.name=Ancient Wizard Hat
 item.ancientspellcraft\:wizard_hat_ancient=Ancient Wizard Hat
