--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -581,6 +581,8 @@ item.ancientspellcraft\:ring_unbinding.desc=Grants a 20%% chance to reclaim the 
 item.ancientspellcraft\:ring_unbinding.name=Ring of Unbinding
 item.ancientspellcraft\:ring_withdraw_life.desc=Overhealing from Withdraw Life grants a temporary shield
 item.ancientspellcraft\:ring_withdraw_life.name=Ring of the Overlord
+item.ancientspellcraft\:ring_rare_scroll.desc=Rare scrolls have 15%% chance to be preserved when used
+item.ancientspellcraft\:ring_rare_scroll.name=Seal of the Scrollmaster
 item.ancientspellcraft\:ritual_book.name=Ritual Book
 item.ancientspellcraft\:ritual_book.desc=Can be identified with a Scroll of Identification
 item.ancientspellcraft\:ritual_book.desc_disabled=This ritual is disabled
