feat: Beanstalk can now grow vines downwards when sneak-cast.

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -851,7 +851,7 @@ spell.ancientspellcraft\:astral_projection.desc=Allows the caster's spirit to en
 spell.ancientspellcraft\:astral_projection=Astral Projection
 spell.ancientspellcraft\:attire_alteration.desc=Stores your current armor set in a magical pocket and allows quickly swapping armor.
 spell.ancientspellcraft\:attire_alteration=Attire Alteration
-spell.ancientspellcraft\:beanstalk.desc=Grows a vine ladder on vertical surfaces.
+spell.ancientspellcraft\:beanstalk.desc=Grows a vine ladder on vertical surfaces. Sneak-cast on a surface to grow vine downwards.
 spell.ancientspellcraft\:beanstalk=Beanstalk
 spell.ancientspellcraft\:blockweaving.desc=Magically places block from your offhand by selecting the start position with first cast and end position with second cast.
 spell.ancientspellcraft\:blockweaving.first_pos_set=Remembered the first position at %s, %s, %s. Cast again to place blocks.
