feat: Added the Mystic Scroll

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -287,6 +287,8 @@ item.ancientspellcraft\:ancient_mana_flask.desc=Seems to have a rune carved into
 item.ancientspellcraft\:ancient_mana_flask.name=Ancient Mana Flask
 item.ancientspellcraft\:ancient_spell_book.name=Ancient Spell Book
 item.ancientspellcraft\:ancient_spellcraft_scroll.name=Scroll of %1$s
+item.ancientspellcraft\:mystic_scroll.name=Scroll of %1$s
+item.ancientspellcraft\:mystic_scroll.desc=Only Sages can use this
 item.ancientspellcraft\:ancient_spellcraft_spell_book.name=Spell Book
 item.ancientspellcraft\:arcane_compound.name=Arcane Compound
 item.ancientspellcraft\:artefact_pensive.name=Pensive
