feat: Intensifying Focus no longer reduces spell potency and blast. Fixes #180

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -1021,7 +1021,7 @@ spell.ancientspellcraft\:ice_tower.no_room=Not enough free space for the ice tow
 spell.ancientspellcraft\:ice_tower=Ice Tower
 spell.ancientspellcraft\:ice_workbench.desc=Creates an Ice Workbench
 spell.ancientspellcraft\:ice_workbench=Ice Workbench
-spell.ancientspellcraft\:intensifying_focus.desc=By channelling a greater amount of magical energy and focusing it to a smaller scale, increases your next spell's Potency
+spell.ancientspellcraft\:intensifying_focus.desc=Increases the potency of your next spell cast. Can be stacked by repeated casts.
 spell.ancientspellcraft\:intensifying_focus=Intensifying Focus
 spell.ancientspellcraft\:lava_vision.desc=Allows the caster to see through lava clearly.
 spell.ancientspellcraft\:lava_vision=Lava Vision
