feat: Added many new runewords and charm artefacts

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -288,6 +288,7 @@ item.ancientspellcraft\:ancient_mana_flask.name=Ancient Mana Flask
 item.ancientspellcraft\:ancient_spell_book.name=Ancient Spell Book
 item.ancientspellcraft\:ancient_spellcraft_scroll.name=Scroll of %1$s
 item.ancientspellcraft\:mystic_scroll.name=Scroll of %1$s
+item.ancientspellcraft\:blank_mystic_scroll.name=Blank Mystic Scroll
 item.ancientspellcraft\:mystic_scroll.desc=Only Sages can use this
 item.ancientspellcraft\:ancient_spellcraft_spell_book.name=Spell Book
 item.ancientspellcraft\:arcane_compound.name=Arcane Compound
@@ -636,6 +637,7 @@ item.ancientspellcraft\:rune_uruz.name=Uruz Rune
 item.ancientspellcraft\:rune_wynn.name=Wynn Rune
 item.ancientspellcraft\:rune_yngvi.name=Yngvi Rune
 item.ancientspellcraft\:runic_plate.name=Runic Plate
+item.ancientspellcraft\:mystic_spell_book.name=Mystic Spell Book
 item.ancientspellcraft\:mystic_spell_book.name=Mystic Spell Book
 item.ancientspellcraft\:forbidden_tome.name=Forbidden Tome
 item.ancientspellcraft\:sacred_mace.name=Sacred Mace
@@ -1340,7 +1342,7 @@ item.ancientspellcraft\:charm_hoarders_orb.name=Hoarder's Orb
 item.ancientspellcraft\:charm_hoarders_orb.desc=Teleport Object places objects near your transportation stone circle
 spell.ancientspellcraft\:conjure_creeper.desc=Summons a creeper to fight for you. The creeper will disappear after 30 seconds or if it is exploded or killed.
 spell.ancientspellcraft\:conjure_creeper=Conjure Creeper
-spell.ancientspellcraft\:identify.desc=Has a chance to identify unknown, non-class specific spell book on a Mystic Lectern. Requires continuous concentration.
+spell.ancientspellcraft\:identify.desc=Has a chance to identify unknown, non-class specific spell books on a Mystic Lectern. Requires continuous concentration.
 spell.ancientspellcraft\:identify.book_not_open=The book needs to be open
 spell.ancientspellcraft\:identify.known_spell=You already know this spell
 spell.ancientspellcraft\:identify.attempt_failed=Failed to identify this spell, keep trying
