chore: Added Runeword - Improve

--- a/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
+++ b/src/main/resources/assets/ancientspellcraft/lang/en_us.lang
@@ -367,6 +367,8 @@ item.ancientspellcraft\:charm_fire_orb.desc=Increases Fire spell Potency by %1$s
 item.ancientspellcraft\:charm_fire_orb.name=Orb of Raging Fire
 item.ancientspellcraft\:charm_glyph_antigravity.desc=Increases speed by 25%% and jump height while holding the Spell Blade, but also makes its hits weaker, reducing damage by 25%%
 item.ancientspellcraft\:charm_glyph_antigravity.name=Glyph of Anti-Gravity
+item.ancientspellcraft\:charm_glyph_charge.desc=Doubles the charge count of charge-based Runewords
+item.ancientspellcraft\:charm_glyph_charge.name=Glyph of Charge
 item.ancientspellcraft\:charm_glyph_illumination.desc=The Spell Blade radiates with light, illuminating the nearby area
 item.ancientspellcraft\:charm_glyph_illumination.name=Glyph of Illumination
 item.ancientspellcraft\:charm_glyph_might.desc=Increases the Spell Blade's attack damage by 20%%
@@ -396,6 +398,10 @@ item.ancientspellcraft\:charm_aura_wither.name=Glyph of Death
 item.ancientspellcraft\:charm_aura_wither.desc=Withers all nearby enemies\nOnly battlemages can use this
 item.ancientspellcraft\:charm_aura_tenacity.name=Glyph of Tenacity
 item.ancientspellcraft\:charm_aura_tenacity.desc=Halves the duration of harmful effects for nearby allies and the battlemage
+item.ancientspellcraft\:charm_aura_defense.desc=Grants bonus armor for the battlemage and nearby allies
+item.ancientspellcraft\:charm_aura_defense.name=Glyph of Defense
+item.ancientspellcraft\:charm_aura_vulnerability.desc=Reduces the armor of nearby enemies around the battlemage
+item.ancientspellcraft\:charm_aura_vulnerability.name=Glyph of Vulnerability
 
 item.ancientspellcraft\:charm_gold_bag.desc=This magically enhanced coin bag refills itself with 3-8 gold nuggets each day
 item.ancientspellcraft\:charm_gold_bag.empty=You search through the bag but it was empty..
@@ -790,6 +796,8 @@ potion.ancientspellcraft\:unlimited_power=Unlimited Power
 potion.ancientspellcraft\:water_walking=Water Walking
 potion.ancientspellcraft\:wizard_shield=Wizard Shield
 potion.ancientspellcraft\:tenacity=Tenacity
+potion.ancientspellcraft\:improved_armor=Improved Armor
+potion.ancientspellcraft\:degraded_armor=Degraded Armor
 
 # relic
 relic_type.enchantment.instruction=Hold the table in your main hand and an item in your other hand for 6 seconds to enchant it
@@ -1021,7 +1029,7 @@ spell.ancientspellcraft\:ice_cream=Ice Cream
 spell.ancientspellcraft\:ice_shield.desc=Creates a shield of enchanted ice which applies a Frostbite effect to attackers and explodes when it breaks, freezing enemies
 spell.ancientspellcraft\:ice_shield=Ice Shield
 spell.ancientspellcraft\:ice_tower.desc=Creates a Tower of Ice of enchanted snow and ice which never melts. Must be casted downwards
-spell.ancientspellcraft\:ice_tower.no_room=Not enough free space for the ice tower
+spell.ancientspellcraft\:ice_tower.no_room=Not enough free space for the pocket library
 spell.ancientspellcraft\:ice_tower=Ice Tower
 spell.ancientspellcraft\:ice_workbench.desc=Creates an Ice Workbench
 spell.ancientspellcraft\:ice_workbench=Ice Workbench
@@ -1075,6 +1083,7 @@ spell.ancientspellcraft\:permagrowth=Permagrowth
 spell.ancientspellcraft\:permashrink.desc=Permanently reduces the size of a targeted non-player entity.
 spell.ancientspellcraft\:permashrink=Permashrink
 spell.ancientspellcraft\:pocket_dimension.desc=After channeling for 3 seconds, teleports the caster to its own pocket dimension.
+spell.ancientspellcraft\:pocket_dimension.no_room=After channeling for 3 seconds, teleports the caster to its own pocket dimension.
 spell.ancientspellcraft\:pocket_dimension=Pocket Dimension
 spell.ancientspellcraft\:power_siphon.desc=Weaken the target's magical power for a short duration to empower your own.
 spell.ancientspellcraft\:power_siphon=Power Siphon
@@ -1234,7 +1243,7 @@ spell.ancientspellcraft\:runeword_strength.desc=Temporarily empowers you with St
 spell.ancientspellcraft\:runeword_strength=Runeword: Strength
 spell.ancientspellcraft\:runeword_ignite.desc=The next hit with the Spell Blade sets the target on fire for a long duration.
 spell.ancientspellcraft\:runeword_ignite=Runeword: Ignite
-spell.ancientspellcraft\:runeword_imbue.desc=Imbue the Spell Blade with a potion from the hotbar for the next few hits
+spell.ancientspellcraft\:runeword_imbue.desc=Imbue the Spell Blade with a potion from the hotbar for the next few hits.
 spell.ancientspellcraft\:runeword_imbue=Runeword: Imbue
 spell.ancientspellcraft\:runeword_empower.desc=Instantly charges the Spell Blade, causing its next attack to trigger its empowered effect.
 spell.ancientspellcraft\:runeword_empower=Runeword: Empower
@@ -1460,6 +1469,8 @@ spell.ancientspellcraft\:death_mark=Death Mark
 spell.ancientspellcraft\:death_mark.desc=Places a magical glyph on the targeted entity, allowing you to sense if the entity dies.
 spell.ancientspellcraft\:death_mark.entity_death_message=Death-marked %1$s died at %2$s, %3$s, %4$s
 spell.ancientspellcraft\:death_mark.entity_marked=Death-marked %1$s
+spell.ancientspellcraft\:runesmithing_improve=Runesmithing: Improve
+spell.ancientspellcraft\:runesmithing_improve.desc=Enchants a tool in an Arcane Anvil with Efficiency. It also always restores 5%% durability to the tool.
 
 spell.ancientspellcraft\:tome_warp=Tome Warp
 spell.ancientspellcraft\:tome_warp.desc=Swaps place with your Awakened Tome by sneak-using the Tome Controller.
@@ -1496,4 +1507,6 @@ item.ancientspellcraft\:belt_soul_scorch.name=Scorching Belt
 item.ancientspellcraft\:belt_soul_scorch.desc=Attackers receive the Soul Scorch effect or 3 seconds
 item.ancientspellcraft\:charm_glyph_shield_disable.name=Glyph of Unyielding
 item.ancientspellcraft\:charm_glyph_shield_disable.desc=The Runic Shield cannot be disabled by axes or any other means
+item.ancientspellcraft\:runic_hammer.name=Runic Hammer
+generic.ancientspellcraft\:runic_hammer_spell.no_anvil=You must cast this spell on an Arcane Anvil
 
